--- a/RF_WEB/RF_WEB.csproj
+++ b/RF_WEB/RF_WEB.csproj
@@ -165,6 +165,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CarCodeReliefRecords.cs" />
+    <Compile Include="Models\DataTableParameter.cs" />
     <Compile Include="Models\PageMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -858,10 +860,10 @@
     <Content Include="Views\Shared\_footer.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
+    <Content Include="Views\Manage\ReliefRecord.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\PageMenu\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
