--- a/RF_WEB/RF_WEB.csproj
+++ b/RF_WEB/RF_WEB.csproj
@@ -169,6 +169,8 @@
     <Compile Include="Models\DataTableParameter.cs" />
     <Compile Include="Models\PageMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\AjaxResult.cs" />
+    <Compile Include="Utils\VerifyCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -831,6 +833,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\js_login.js" />
+    <Content Include="Scripts\js_reliefmanage.js" />
+    <Content Include="Scripts\js_reliefrecord.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
@@ -861,6 +866,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Manage\ReliefRecord.cshtml" />
+    <Content Include="Views\Manage\ReliefManage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
