--- a/RF_WEB/RF_WEB.csproj
+++ b/RF_WEB/RF_WEB.csproj
@@ -833,6 +833,7 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\js_invoicerecord.js" />
     <Content Include="Scripts\js_login.js" />
     <Content Include="Scripts\js_reliefmanage.js" />
     <Content Include="Scripts\js_reliefrecord.js" />
@@ -867,6 +868,7 @@
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Manage\ReliefRecord.cshtml" />
     <Content Include="Views\Manage\ReliefManage.cshtml" />
+    <Content Include="Views\Manage\InvoiceRecord.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
